project share button links

--- a/projects.html
+++ b/projects.html
@@ -113,14 +113,14 @@
                               <li class="share left">
                                 <i class='bx bx-share-alt'></i>
                                 <ul class="submenu">
-                                  <li><a href="https://api.whatsapp.com/send?text=www.google.com"
+                                  <li><a href="https://api.whatsapp.com/send?text=https://kyzenbina.com.my/projects/balau"
                                       data-action="share/whatsapp/share" class="whatsapp"><i
                                         class='bx bxl-whatsapp'></i></a></li>
                                   <li><a
-                                      href="http://www.twitter.com/intent/tweet?url=URL_HERE&via=TWITTER_HANDLE_HERE&text=TITLE_HERE"
+                                      href="http://www.twitter.com/intent/tweet?url=https://kyzenbina.com.my/projects/balau&text=Balau-House"
                                       target="_blank" class="share-popup twitter"><i class='bx bxl-twitter'></i></a>
                                   </li>
-                                  <li><a href="http://www.facebook.com/sharer/sharer.php?u=URL_HERE&t=TITLE_HERE"
+                                  <li><a href="http://www.facebook.com/sharer/sharer.php?u=https://kyzenbina.com.my/projects/balau&t=Balau-House"
                                       target="_blank" class="share-popup facebook"><i
                                         class='bx bxl-facebook-circle'></i></a></li>
                                   <li><a href="#!" class="link-text" id="balau-house" data-bs-container="body"
@@ -174,13 +174,13 @@
                             <li class="share left">
                               <i class='bx bx-share-alt'></i>
                               <ul class="submenu">
-                                <li><a href="https://api.whatsapp.com/send?text=www.google.com"
+                                <li><a href="https://api.whatsapp.com/send?text=https://kyzenbina.com.my/projects/sri-hartamas-house"
                                     data-action="share/whatsapp/share" class="whatsapp"><i
                                       class='bx bxl-whatsapp'></i></a></li>
                                 <li><a
-                                    href="http://www.twitter.com/intent/tweet?url=URL_HERE&via=TWITTER_HANDLE_HERE&text=TITLE_HERE"
+                                    href="http://www.twitter.com/intent/tweet?url=https://kyzenbina.com.my/projects/sri-hartamas-house&text=sri-hartamas-house"
                                     target="_blank" class="share-popup twitter"><i class='bx bxl-twitter'></i></a></li>
-                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=URL_HERE&t=TITLE_HERE"
+                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=https://kyzenbina.com.my/projects/sri-hartamas-house&t=sri-hartamas-house"
                                     target="_blank" class="share-popup facebook"><i
                                       class='bx bxl-facebook-circle'></i></a></li>
                                 <li><a href="#!" class="link-text" id="sri-hartamas-house" data-bs-container="body"
@@ -229,13 +229,13 @@
                             <li class="share left">
                               <i class='bx bx-share-alt'></i>
                               <ul class="submenu">
-                                <li><a href="https://api.whatsapp.com/send?text=www.google.com"
+                                <li><a href="https://api.whatsapp.com/send?text=https://kyzenbina.com.my/projects/showcase-hotel"
                                     data-action="share/whatsapp/share" class="whatsapp"><i
                                       class='bx bxl-whatsapp'></i></a></li>
                                 <li><a
-                                    href="http://www.twitter.com/intent/tweet?url=URL_HERE&via=TWITTER_HANDLE_HERE&text=TITLE_HERE"
+                                    href="http://www.twitter.com/intent/tweet?url=https://kyzenbina.com.my/projects/showcase-hotel&text=showcase-hotel"
                                     target="_blank" class="share-popup twitter"><i class='bx bxl-twitter'></i></a></li>
-                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=URL_HERE&t=TITLE_HERE"
+                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=https://kyzenbina.com.my/projects/showcase-hotel&t=showcase-hotel"
                                     target="_blank" class="share-popup facebook"><i
                                       class='bx bxl-facebook-circle'></i></a></li>
                                 <li><a href="#!" class="link-text" id="showcase-hotel" data-bs-container="body"
@@ -283,13 +283,13 @@
                             <li class="share left">
                               <i class='bx bx-share-alt'></i>
                               <ul class="submenu">
-                                <li><a href="https://api.whatsapp.com/send?text=www.google.com"
+                                <li><a href="https://api.whatsapp.com/send?text=https://kyzenbina.com.my/projects/luma-hotel"
                                     data-action="share/whatsapp/share" class="whatsapp"><i
                                       class='bx bxl-whatsapp'></i></a></li>
                                 <li><a
-                                    href="http://www.twitter.com/intent/tweet?url=URL_HERE&via=TWITTER_HANDLE_HERE&text=TITLE_HERE"
+                                    href="http://www.twitter.com/intent/tweet?url=https://kyzenbina.com.my/projects/luma-hotel&text=luma-hotel"
                                     target="_blank" class="share-popup twitter"><i class='bx bxl-twitter'></i></a></li>
-                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=URL_HERE&t=TITLE_HERE"
+                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=https://kyzenbina.com.my/projects/luma-hotel&t=luma-hotel"
                                     target="_blank" class="share-popup facebook"><i
                                       class='bx bxl-facebook-circle'></i></a></li>
                                 <li><a href="#!" class="link-text" id="luma-hotel" data-bs-container="body"
@@ -338,13 +338,13 @@
                             <li class="share left">
                               <i class='bx bx-share-alt'></i>
                               <ul class="submenu">
-                                <li><a href="https://api.whatsapp.com/send?text=www.google.com"
+                                <li><a href="https://api.whatsapp.com/send?text=https://kyzenbina.com.my/projects/taman-pantai-house"
                                     data-action="share/whatsapp/share" class="whatsapp"><i
                                       class='bx bxl-whatsapp'></i></a></li>
                                 <li><a
-                                    href="http://www.twitter.com/intent/tweet?url=URL_HERE&via=TWITTER_HANDLE_HERE&text=TITLE_HERE"
+                                    href="http://www.twitter.com/intent/tweet?url=https://kyzenbina.com.my/projects/taman-pantai-house&text=taman-pantai-house"
                                     target="_blank" class="share-popup twitter"><i class='bx bxl-twitter'></i></a></li>
-                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=URL_HERE&t=TITLE_HERE"
+                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=https://kyzenbina.com.my/projects/taman-pantai-house&t=taman-pantai-house"
                                     target="_blank" class="share-popup facebook"><i
                                       class='bx bxl-facebook-circle'></i></a></li>
                                 <li><a href="#!" class="link-text" id="taman-pantai-house" data-bs-container="body"
@@ -393,13 +393,13 @@
                             <li class="share left">
                               <i class='bx bx-share-alt'></i>
                               <ul class="submenu">
-                                <li><a href="https://api.whatsapp.com/send?text=www.google.com"
+                                <li><a href="https://api.whatsapp.com/send?text=https://kyzenbina.com.my/projects/birch"
                                     data-action="share/whatsapp/share" class="whatsapp"><i
                                       class='bx bxl-whatsapp'></i></a></li>
                                 <li><a
-                                    href="http://www.twitter.com/intent/tweet?url=URL_HERE&via=TWITTER_HANDLE_HERE&text=TITLE_HERE"
+                                    href="http://www.twitter.com/intent/tweet?url=https://kyzenbina.com.my/projects/birch&text=BIRCH@DCM"
                                     target="_blank" class="share-popup twitter"><i class='bx bxl-twitter'></i></a></li>
-                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=URL_HERE&t=TITLE_HERE"
+                                <li><a href="http://www.facebook.com/sharer/sharer.php?u=https://kyzenbina.com.my/projects/birch&t=BIRCH@DCM"
                                     target="_blank" class="share-popup facebook"><i
                                       class='bx bxl-facebook-circle'></i></a></li>
                                 <li><a href="#!" class="link-text" id="Birch" data-bs-container="body"
