jpg to png - studio

--- a/studio.html
+++ b/studio.html
@@ -129,7 +129,7 @@
               <div class="key row g-4 mt-4 d-flex justify-content-center">
                 <div class="col-lg-4 col-sm-6 mb-3">
                   <a href="/studio/kelvin-profile">
-                    <img class="pb-4 mb-3" src="img/Ellipse 4.jpg" alt="Kelvin Tan Portrait">
+                    <img class="pb-4 mb-3" src="img/Ellipse 4.png" alt="Kelvin Tan Portrait">
                     <h6>Kelvin Tan</h6>
                     <div class="profile-details">Project Manager <br>
                       <div id="quali"> MEng Civil Engineering <br> Uni. College London (England)</div>
@@ -140,7 +140,7 @@
 
                 <div class="col-lg-4 col-sm-6 mb-3">
                   <a href="/studio/may-profile">
-                    <img class="pb-4 mb-3" src="img/Ellipse 5.jpg" alt="Kelvin Tan Portrait">
+                    <img class="pb-4 mb-3" src="img/Ellipse 5.png" alt="Kelvin Tan Portrait">
                     <h6 class="d-block mx-auto">May Koay</h6>
                     <div class="profile-details">Architect/ Interior Designer <br>
                       <div id="quali"> B.Sc(Hons) Architecture <br> Masters In Architecture <br> Newcastle University
