--- a/projects.html
+++ b/projects.html
@@ -33,32 +33,32 @@
   <!-- Sidebar -->
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="sidebar-brand mx-4  d-flex align-items-center">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <span>KYZEN | <br>BINA </span>
       </a>
     </div>
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="studio.html" class="list-group-item list-group-item-action py-2 " aria-current="true">
+        <a href="/studio" class="list-group-item list-group-item-action py-2 " aria-current="true">
           <div class="icon-ani">
             <p><i class='bx bxs-home me-3'></i>
               <span>Studio</span>
             </p>
           </div>
         </a>
-        <a href="projects.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/projects" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-building-house'></i>
             <span>Projects</span>
           </div>
         </a>
-        <a href="gallery.html" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
+        <a href="/gallery" class="list-group-item list-group-item-action py-2 mb-4 " aria-current="true">
           <div class="icon-ani">
             <i class='bx bxs-home me-3'></i>
             <span>Gallery</span>
           </div>
         </a>
-        <a href="contact-us.html" class="list-group-item list-group-item-action py-2" aria-current="true">
+        <a href="/contact-us" class="list-group-item list-group-item-action py-2" aria-current="true">
           <button class="btn">
             Contact Us
           </button>
